add signups to todays sessions
