# app/org/sailcbi/APIServer/Api/Endpoints/Staff/Rest/ApClassInstances.scala
@@ -11,7 +11,7 @@ import play.api.mvc.{Action, AnyContent, InjectedController}
 import javax.inject.Inject
 import scala.concurrent.{ExecutionContext, Future}
 
-class ApClassInstances @Inject()(implicit val exec: ExecutionContext) extends RestController(BoatType) with InjectedController {
+class ApClassInstances @Inject()(implicit val exec: ExecutionContext) extends InjectedController {
 	def getThisSeason()(implicit PA: PermissionsAuthority): Action[AnyContent] = Action.async(req => {
 		PA.withRequestCache(StaffRequestCache)(None, ParsedRequest(req), rc => {
 			val currentSeason = PA.currentSeason()
@@ -40,55 +40,9 @@ class ApClassInstances @Inject()(implicit val exec: ExecutionContext) extends Re
 				ApClassInstance.fields.locationString,
 			), 1200)
 
-			val signupsQb = QueryBuilder
-				.from(ApClassSignup)
-				.innerJoin(Person.alias, Person.fields.personId.alias.equalsField(ApClassSignup.fields.personId.alias))
-				.outerJoin(ApClassWaitlistResult.aliasOuter, ApClassWaitlistResult.fields.signupId.alias.equalsField(ApClassSignup.fields.signupId.alias))
-				.where(ApClassSignup.fields.instanceId.alias.inList(instanceIds))
-				.select(List(
-					ApClassSignup.fields.signupId.alias,
-					ApClassSignup.fields.instanceId.alias,
-					ApClassSignup.fields.personId.alias,
-					ApClassSignup.fields.orderId.alias,
-					ApClassSignup.fields.signupDatetime.alias,
-					ApClassSignup.fields.sequence.alias,
-					ApClassSignup.fields.signupType.alias,
-					ApClassSignup.fields.price.alias,
-					ApClassSignup.fields.closeId.alias,
-					ApClassSignup.fields.discountInstanceId.alias,
-					ApClassSignup.fields.paymentMedium.alias,
-					ApClassSignup.fields.ccTransNum.alias,
-					ApClassSignup.fields.voidCloseId.alias,
-					ApClassSignup.fields.signupNote.alias,
-					ApClassSignup.fields.voidedOnline.alias,
-					ApClassSignup.fields.paymentLocation.alias,
-
-					ApClassWaitlistResult.fields.signupId.alias(ApClassWaitlistResult.aliasOuter),
-					ApClassWaitlistResult.fields.foVmDatetime.alias(ApClassWaitlistResult.aliasOuter),
-					ApClassWaitlistResult.fields.wlResult.alias(ApClassWaitlistResult.aliasOuter),
-					ApClassWaitlistResult.fields.offerExpDatetime.alias(ApClassWaitlistResult.aliasOuter),
-					ApClassWaitlistResult.fields.foAlertDatetime.alias(ApClassWaitlistResult.aliasOuter),
-
-					Person.fields.personId.alias,
-					Person.fields.nameFirst.alias,
-					Person.fields.nameLast.alias
-				))
-
-			val signups = rc.executeQueryBuilder(signupsQb, 2000).map(qbrr => {
-				val signup = ApClassSignup.construct(qbrr)
-				val person = Person.construct(qbrr)
-				signup.references.person.set(person)
-				ApClassWaitlistResult.construct(qbrr, ApClassWaitlistResult.aliasOuter) match {
-					case Some(wlResult) => signup.references.apClassWaitlistResult.set(wlResult)
-					case None =>
-				}
-				signup
-			})
-
 			instances.foreach(i => {
 				val instanceId = i.values.instanceId.get
 				i.references.apClassSessions.set(sessions.filter(_.values.instanceId.get == instanceId))
-				i.references.apClassSignups.set(signups.filter(_.values.instanceId.get == instanceId))
 			})
 
 			Future(Ok(Json.toJson(instances)))
